---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2024-03-10
  Major Features:
    - Other mods can now use the interface to print messages that won't get deleted
  Bugfixes:
    - General messages now actually use their color
  Info:
    - Refactored Chats to now just use a localized string instead of a 'header' and 'message'
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 2024-03-09
  Major Features:
    - Chat now naturally prints a select portion, only for opening chat to print everything
  Changes:
    - Improved research queue messages
    - Now uses command listener for admin promotion so it can respond accurately
  Bugfixes:
    - Migration is working again
  Issues:
    - Adding to research queue is not an event, so it doesn't work
    - Removing from research queue does not report the user, so it gets a descriptive "Unknown"
    - A message being sent while you're in chat, will make chat small again.
---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 2024-02-24
  Bugfixes:
    - Fixed crash on research finish
---------------------------------------------------------------------------------------------------
Version: 0.2.6
Date: 2024-01-24
  Changes:
    - Fading out chat colors and the full message coloration toggle have been merged
    - Now actually immediately reacts to settings changes
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 2024-01-23
  Major Features:
    - You can now toggle whether or not the full message gets colored
  Minor Features:
    - Now players can fade out user colors in chat
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2024-01-23
  Changes: